Error on paths to CSS and JS fix

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
     <!--CSS-->
-    <link rel="stylesheet" href="../CSS/CVStyles.css">
+    <link rel="stylesheet" href="CSS/CVStyles.css">
 </head>
 <body>
-    <script src="../JavaScript/CVJS.js"></script>
+    <script src="JavaScript/CVJS.js"></script>
     
 
     <header class="jumbotron text-left row person-header" style="margin-bottom:0">
